[package]
name = "abi-cafe"
description = "Pair your compilers up at The ABI café!"
repository = "https://github.com/Gankra/abi-cafe"
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
exclude = ["generated_impls/", "handwritten_impls/", "tests/"]

[features]
default = []
# Doesn't actually work yet...
parallel = ["rayon"]


[dependencies]
camino = { version = "1.1.7", features = ["serde1"] }
cc = { version = "1.0.73", git = "https://github.com/Gankra/cc-rs" }
clap = { version = "4.5.4", features = ["cargo", "wrap_help"] }
kdl = { git = "https://github.com/Gankra/kdl-rs", branch = "spanned" }
kdl-script = { path = "../kdl-script" }
libloading = "0.7.3"
linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
log = "0.4.14"
miette = { version = "5.3.0", features = ["fancy"] }
rayon = { version = "1.5.3", optional = true }
ron = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.83"
simplelog = "0.11.2"
thiserror = "1.0.30"
tokio = { version = "1.37.0", features = ["full", "tracing"] }

[lints.clippy]
result_large_err = "allow"

[build-dependencies]
built = "0.5.1"
