[package]
name = "kdl-script"
description = "execute kdl documents!"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

exclude = [
  "book/*",
  "src/snapshots/*",
  "src/tests/",
  "tests/",
  "examples/",
]

[[bin]]
name = "kdl-script"
required-features = ["cli"]

[features]
default = ["cli"]
# CLI interface for the binary
cli = ["eval"]
# temporarily disabled because workspace-deps can't be optional..?
# cli = ["eval", "clap", "tracing-subscriber", "miette/fancy", "serde_json"]
# The code for evaluating a compiled program (not needed for abi-cafe)
eval = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
kdl.workspace = true
linked-hash-map.workspace = true
miette.workspace = true
nom.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta.workspace = true
